allow smile and cbor to parse charset param. See ClientYamlTestExecutionContext:L122